--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="grid-2">
         <div class="section-1">
-            <img src="samuel.png" alt="Profile Picture" class="profile-pic">
+            <img src="king david nyiagee.jpg" alt="Profile Picture" class="profile-pic">
             <h2>FirstName LastName</h2>
             <p>City,Country.</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
