--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Your Name</title>
+    <title>David Nyiagee</title>
 </head>
 <body>
     <div class="grid-2">
         <div class="section-1">
             <img src="king david nyiagee.jpg" alt="Profile Picture" class="profile-pic">
-            <h2>FirstName LastName</h2>
-            <p>City,Country.</p>
+            <h2>David Nyiagee</h2>
+            <p>Zaki-Biam, Nigeria</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
+            <p>Comr. David Tavershima Nyiagee is the National Secretary, Ayatutu Cultural and Social Development Initiative (AYACASODI) Worldwide. A human rights Activist, Peace Advocator. A writer and Computer Professional. Presently undergoing Computer Engineering Course.</p>
             <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
+            <p>Held many offices in different standard organizations. Written and presented numerous papers and books.</p>
 
             <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
+            <p>Writing, Computer operating.</p>
             <h2>Projects</h2>
-            <a href="#">Project 1</a>
+            <a href="#">The Effects of Child/Premature marriage in this Generation. Tiv version. https://drive.google.com/file/d/1RrET0zFyUyicQ4xH43ItBde0mj3p4E7j/view?usp=drivesdk </a>
             <a href="#">Project 2</a>
             <a href="#">Project 3</a>
             <a href="#">Project 4</a>
             <a href="#">Project 5</a>
             <h2>Contact</h2>
-            <p>myEmail@email.com</p>
+            <p>davidnyiagee@gmail.com</p>
         </div>
     </div>
 </body>
