--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="grid-2">
         <div class="section-1">
-            <img src="king david nyiagee.jpg" alt="Profile Picture" class="profile-pic">
+            <img src="nyiagee.jpg" alt="King David" class="profile-pic">
             <h2>David Nyiagee</h2>
             <p>Zaki-Biam, Nigeria</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -27,7 +27,7 @@
             <h2>Skills</h2>
             <p>Writing, Computer operating.</p>
             <h2>Projects</h2>
-            <a href="#">The Effects of Child/Premature marriage in this Generation. Tiv version. https://drive.google.com/file/d/1RrET0zFyUyicQ4xH43ItBde0mj3p4E7j/view?usp=drivesdk </a>
+            <a href="#">https://drive.google.com/file/d/1RrET0zFyUyicQ4xH43ItBde0mj3p4E7j/view?usp=drivesdk </a>
             <a href="#">Project 2</a>
             <a href="#">Project 3</a>
             <a href="#">Project 4</a>
